# gpiozerorpi

./: README.md  README.rst  setup.cfg
gpiozerocli/: pinout.py
gpiozerorpi/: __init__.py  input_devices.py  output_devices.py
gpiozerorpi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  ledbuttonNeu.py  test_boards.py  test_compat.py  test_devices.py  test_fonts.py  test_inputs.py  test_internal_devices.py  test_mixins.py  test_mock_pin.py  test_outputs.py  test_pins_data.py  test_real_pins.py  test_spi_devices.py  test_tones.py  test_tools.py
tests/cli/: test_pinout.py
