[metadata]
name = gpiozerorpi
version = 2.0
description = A simple interface to GPIO devices with Raspberry Pi
long_description = file:README.rst
author = Ben Nuttall
author_email = ben@bennuttall.com
url = https://gpiozero.readthedocs.io/
project_urls =
    Documentation = https://gpiozero.readthedocs.io/
    Source Code = https://github.com/ClaudiusVi/gpiozerorpi
    Issue Tracker = https://github.com/ClaudiusVi/gpiozerorpi/issues
keywords = raspberrypi gpio low high
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requres = >=3.9
install_requires =
    colorzero

[options.package_data]
gpiozero =
    fonts/*.txt

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx>=4.0
    sphinx-rtd-theme>=1.0

[options.entry_points]
console_scripts =
    pinout = gpiozerocli.pinout:main
    pintest = gpiozerocli.pintest:main
gpiozero_pin_factories =
    pigpio  = gpiozerorpi.pins.pigpio:PiGPIOFactory
    lgpio   = gpiozerorpi.pins.lgpio:LGPIOFactory
    rpigpio = gpiozerorpi.pins.rpigpio:RPiGPIOFactory
    native  = gpiozerorpi.pins.native:NativeFactory
    mock    = gpiozerorpi.pins.mock:MockFactory
gpiozero_mock_pin_classes =
    mockpin          = gpiozerorpi.pins.mock:MockPin
    mockpwmpin       = gpiozerorpi.pins.mock:MockPWMPin
    mockchargingpin  = gpiozerorpi.pins.mock:MockChargingPin
    mocktriggerpin   = gpiozerorpi.pins.mock:MockTriggerPin

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = gpiozerorpi
branch = true

[coverage:report]
ignore_errors = true
show_missing = true
exclude_lines =
    pragma: no cover
    assert False
    raise AssertionError
    raise NotImplementedError
    pass
    if __name__ == .__main__.:

[copyrights:settings]
include =
  **/*.py
  **/*.rst
exclude =
  docs/examples/*.py
  docs/license.rst
license = LICENSE.rst
preamble =
  GPIO Zero: a library for controlling the Raspberry Pi's GPIO pins
strip-preamble = false

[class_graph:settings]
abstract =
    Device
    GPIODevice
    SmoothedInputDevice
    AnalogInputDevice
    MCP3xxx
    MCP3xx2
    MCP30xx
    MCP32xx
    MCP33xx
    SPIDevice
    CompositeDevice
    CompositeOutputDevice
    LEDCollection
    InternalDevice
omit =
    object
    GPIOBase
    GPIOMeta
    frozendict
    WeakMethod
    _EnergenieMaster
source =
    ggpiozerorpi/**/*.py

[previewer:settings]
command = make -C docs html
html = build/html
watch =
    gpiozerorpi/**/*.py
    gpiozerocli/**/*.py
    docs/*.rst
    docs/examples/*.py
    docs/_static/*
